--- a/config/locales/model.ya.yml
+++ b/config/locales/model.ya.yml
@@ -1,16 +1,12 @@
 ja:
   activerecord:
     models:
-      blog: "ブログ"
       contact: "お問い合わせ"
       user: "ユーザー"
+      topic: "記事"
     attributes:
-      blog:
+      topic:
         title: "タイトル"
-        content: "内容"
-      contact:
-        name: "名前"
-        email: "メールアドレス"
         content: "内容"
       user:
         title: "タイトル"
